openshift/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: sliples
  labels:
    app.kubernetes.io/name: sliples
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sliples
    app.kubernetes.io/component: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
